--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,12 +3,28 @@
   box-sizing: border-box;
 }
 
-main {
+body {
+  background-color: #F6F8FC;
+}
+
+.content {
   padding: 1rem;
+  background-color: white;
+  height: 100vh;
+  width: 100vw;
 }
 
 main h1 {
   margin: 0;
+}
+
+@media screen and (min-width: 992px) {
+  .content {
+    max-width: 992px;
+    height: auto;
+    margin: 1rem auto;
+    border-radius: 1rem;
+  }
 }
 
 .pokemon-list {
@@ -16,7 +32,25 @@ main h1 {
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+}
+
+@media screen and (min-width: 380px) {
+  .pokemon-list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .pokemon-list {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .pokemon-list {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
 .pokemon-card {
@@ -47,13 +81,13 @@ main h1 {
   justify-content: space-between;
 }
 
-.pokemon-card .types {
+.pokemon-card .details .types {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.pokemon-card .types .type {
+.pokemon-card .details .types .type {
   font-size: .625rem;
   color: white;
   background-color: #61E1CA;
