--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -129,6 +129,24 @@
   align-self: flex-end;
 }
 
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+}
+
+.pagination button {
+  padding: .25rem 1rem;
+  margin: .25rem 0;
+  color: white;
+  background-color: #6c79db;
+  border: none;
+  border-radius: 1rem;
+}
+
 @media screen and (min-width: 380px) {
   .pokemon-list {
     grid-template-columns: 1fr 1fr;
